# boring-noise

./: Cargo.toml
src/: lib.rs
src/noise/: handshake.rs  mod.rs  rate_limiter.rs  session.rs  timers.rs  tls.rs
src/packet/: ip.rs  mod.rs  udp.rs  wg.rs
src/packet/ipv4/: mod.rs
src/packet/ipv6/: mod.rs
src/sleepyinstant/: mod.rs
