[package]
name = "boring-noise"
description = "cloudflare boringtun implementation without device"
version = "0.1.0"
authors = [
    "Watfaq Devs <dev@watfaq.com>",
]
license = "BSD-3-Clause"
repository = "https://github.com/watfaq/boring-noise"
edition = "2021"

[features]
default = ["aws-lc-rs"]
# mocks std::time::Instant with mock_instant
mock-instant = ["mock_instant"]
ring = ["dep:ring", "dep:constant_time_eq"]
aws-lc-rs = ["dep:aws-lc-rs"]

[dependencies]
parking_lot = "0.12"
tracing = "0.1.40"
aws-lc-rs = { version = "1", optional = true }
ring = { version = "0.17", optional = true }
constant_time_eq = { version = "0.4", optional = true }

x25519-dalek = { version = "2.0.0", features = [
    "reusable_secrets",
    "static_secrets",
] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
chacha20poly1305 = "0.10.0-pre.1"
aead = "0.5.0-pre.2"
blake2 = "0.10"
hmac = "0.12"
mock_instant = { version = "0.6.0", optional = true }
portable-atomic = "1"

eyre = "0.6.12"
zerocopy = { version = "0.8.27", features = ["std", "derive"] }
bytes = "1.10.1"
duplicate = { version = "2.0.0", default-features = false }
either = "1.15.0"
bitfield-struct = "0.11.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", default-features = false, features = [
    "time",
    "user",
] }

[dev-dependencies]
etherparse = "0.13"
criterion = { version = "0.3.5", features = ["html_reports"] }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bench]]
name = "crypto_benches"
harness = false
